--- a/templates/index.pug
+++ b/templates/index.pug
@@ -6,3 +6,7 @@ block content
     include:markdown-it landing-page/family_intro.md
 
   +teaser-list(['couples', 'single', 'corporations'])
+
+block after_shared_content
+  .area
+    include:markdown-it landing-page/pricing.md
